<resources>
    <string name="app_name">LabAndroidDemo</string>
    <string name="login_create_account">Login / Create Account</string>
    <string name="rendr">rendR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in_exclaim">Log In!</string>
    <string name="create_an_account_to_start_using_render">Create an account to start using RendeR.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="don_39_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="movie_title">Movie Title</string>
    <string name="hi_world">hi world</string>
    <string name="director_name">Director Name</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="directed_by">Directed By:</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="logout">Logout</string>
</resources>