<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B030B"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/watchListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:gravity="center"
        android:text="@string/my_watchlist"
        android:textColor="#ffffffff"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />


    <ScrollView
        android:id="@+id/watchListScrollView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchListTitle"
        app:layout_constraintVertical_bias="0.162">

        <TextView
            android:id="@+id/moviesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_world"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:lineSpacingExtra="6dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="#ffffffff"
            app:layout_constraintVertical_bias="0.162" />
    </ScrollView>

    <ImageView
        android:id="@+id/bottomBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:foreground="@drawable/details_background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="#C14F37"
        android:fontFamily="@font/inter_extrabold"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watchListScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>